k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yseeku-backend
spec:
  selector:
    app: yseeku-backend
  ports:
    - name: http
      protocol: TCP
      port: 3001
      targetPort: 3001
