k8s/base/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yseeku-web
spec:
  selector:
    app: yseeku-web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
