k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yseeku-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: yseeku-web
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: yseeku-backend
                port:
                  number: 3001
